--- a/src/ChartSampleTests/WinFormsMvvmSampleTests.csproj
+++ b/src/ChartSampleTests/WinFormsMvvmSampleTests.csproj
@@ -62,6 +62,7 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChainingAssertion.MSTest.cs" />
